[metadata]
name = doughboy
version = 0.0.4
url = https://github.com/Hajime-Saitou/doughboy
author = Hajime Saito
author_email = g.hajime.saitou@gmail.com
license = MIT License
license_file = LICENSE
description = Notion Data Source Manipulator for Python
long_description = file: README.md
long_description_content_type = text/markdown
keywords = python, notion
classifiers =
    Development Status :: 5 - Production/Stable
    License :: OSI Approved :: MIT License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Topic :: Software Development :: Libraries :: Python Modules
project_urls =
    Source = https://github.com/Hajime-Saitou/doughboy

[options]
python_requires = >=3.7
packages = find:
include_package_data = false
zip_safe = false
setup_requires =
    setuptools_scm

[options.extras_require]
